--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME="Power Line Monitoring"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_DIR=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -44,6 +45,7 @@ PUSHER_APP_SECRET=chavezlorenzozaragoza
 PUSHER_APP_CLUSTER=mt1
 
 MIX_APP_DEBUG=true
+MIX_APP_DIR="${APP_DIR}"
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
